[package]
name = "rust-playground"
description = "Dependency injection"
version = "0.1.0"
authors = ["Andreas Schaeffer"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
rand = "0.8.0"
rand_distr = "0.4.0"
glfw = "0.41.0"
waiter_di = "1.6.2"
config = "0.9"
serde = { version = "1.0.115", features = [ "derive" ] }
regex = "1.3.9"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8.2"
ansi_term = "0.12.1"

# indradb-lib = "1"
# actix-web = "3"
