[package]
name = "rust-playground"
description = "Dependency injection"
version = "0.1.0"
authors = ["Andreas Schaeffer"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
rand = "0.8.0"
rand_distr = "0.4.0"
glfw = "0.41.0"
waiter_di = "1.6.2"
config = "0.10.1"
serde = { version = "1.0.115", features = [ "derive" ] }
regex = "1.4.3"
lazy_static = "1.4.0"
itertools = "0.10.0"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8.2"
ansi_term = "0.12.1"
num_cpus = "1.13.0"
ndarray = "0.14.0"
bidule = "0.2.0"
deno_core = "0.75.0"
anyhow = "1.0.37"
rust-embed = { version = "5.7.0", features = ["debug-embed", "compression"] }
include-flate = "0.1.3"
indradb-lib = "1"
serde_json = "^1.0.57"
strum = { version = "0.20", features = ["derive", "strum_macros"] }
syn = "=1.0.57"
toml = "0.5.8"
evalexpr = "5"
assets_manager = { version = "0.4.3", features = ["hot-reloading", "json"] }
shadow-rs = "0.5.9"
sysinfo = "0.15.7"

[build-dependencies]
shadow-rs = "0.5"
